cmake_minimum_required(VERSION 3.23)
project(ClionProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(Test Test.cpp)
add_executable(P1000 P1000.cpp)
add_executable(1035 1035.cpp)
add_executable(P1046 P1046.cpp)
add_executable(P1047 P1047.cpp)
add_executable(P1059 P1059.cpp)
add_executable(P1075 P1075.cpp)
add_executable(P1085 P1085.cpp)
add_executable(P1089 P1089.cpp)
add_executable(P1116 P1116.cpp)
add_executable(P1146 P1146.cpp)
add_executable(P1150 P1150.cpp)
add_executable(P1151 P1151.cpp)
add_executable(P1152 P1152.cpp)
add_executable(test test.c)
add_executable(P1161 P1161.cpp)
add_executable(P1179 P1179.cpp)
add_executable(P1200 P1200.cpp)
add_executable(P1304 P1304.cpp)
add_executable(P1307 P1307.cpp)
add_executable(P1317 P1317.cpp)
add_executable(P1319 P1319.cpp)
add_executable(P5715 P5715.cpp)
add_executable(P5718 P5718.cpp)
add_executable(P1997 P6437.cpp)
add_executable(P2670 P2670.cpp)
add_executable(P3717 P3717.cpp)
add_executable(P1605 P1605.cpp)
add_executable(P1548 P1548.cpp)
add_executable(Test2 Test2.cpp)